package org.switch2022.project;

public class Repository {
}
