@startuml
class CreateProfileUI{
}
hide CreateProfileUI circle

class RegisterAccountUI{
}
hide RegisterAccountUI circle

class ChangeProfileUI{
}
hide ChangeProfileUI circle

class AccountListUI{
}
hide AccountListUI circle

class ChangeStatusUI{
}
hide ChangeStatusUI circle

class Repository{
-profileList
-accountList
+Repository()
+createNewProfile(name)
+saveProfile(profile)
+validateProfile(profile)
+addProfile(profile)
+registerAccount(name, email, phoneNumber)
+saveAccount(account)
+validateAccount(account)
+addAccount(account)
+isProfileValid(profileName)
+getProfile(profileName)
+isUserValid(email)
+getAccount(email)
+getListAllAccounts()
+isStatusValid(status)
}
hide Repository circle

class Profile{
-profileName
+Profile(profileName)
+getProfile()
}
hide Profile circle

class Account {
-name
-email
-phoneNumber
-profile
-status
+Account(name, email, phoneNumber)
+getEmail()
+changeStatus(status)
+updateProfile(profile)
}
hide Profile circle

class CreateProfileController {
-repository
+CreateProfileController()
+createNewProfile(name)
+saveProfile()
}
hide CreateProfileController circle

class RegisterAccountController {
-repository
+RegisterAccountController()
+registerAccount(name, email, phoneNumber)
+saveAccount(account)

}
hide RegisterAccountController circle

class ChangeProfileController {
-repository
+ChangeProfileController()
+changeProfile(email,profileName)
}
hide ChangeProfileController circle

class AccountListController{
-repository
+AccountListController()
+getListAllAccounts()
}

class ChangeStatusController{
-repository
+ChangeStatusController()
+changeStatus(email, status)
}
hide ChangeStatusController circle

CreateProfileUI ..>  CreateProfileController: requests
RegisterAccountUI ..>  RegisterAccountController: requests
ChangeProfileUI ..> ChangeProfileController: requests
AccountListUI ..> AccountListController: requests
ChangeStatusUI ..> ChangeStatusController: requests

CreateProfileController ..> Repository
RegisterAccountController ..> Repository
ChangeProfileController ..> Repository
AccountListController ..> Repository
ChangeStatusController ..> Repository

Repository --> Profile: creates
Repository --> Account: creates



@enduml